@@ -57,11 +57,11 @@ func TestLoadConfig(t *testing.T) {
 		DataDbUser: "cgrates2",
 		DataDbPass: "toor",
 		Opts: map[string]interface{}{
-			utils.RedisSentinelNameCfg:  "sentinel1",
-			utils.QueryTimeoutCfg:       "10s",
-			utils.ClusterSyncCfg:        "5s",
-			utils.ClusterOnDownDelayCfg: "0",
-			utils.RedisClusterCfg:       false,
+			utils.RedisSentinelNameCfg:       "sentinel1",
+			utils.QueryTimeoutCfg:            "10s",
+			utils.RedisClusterSyncCfg:        "5s",
+			utils.RedisClusterOnDownDelayCfg: "0",
+			utils.RedisClusterCfg:            false,
 		},
 		RmtConns: []string{},
 		RplConns: []string{},
