@@ -81,11 +81,11 @@ func TestDataDBReload(t *testing.T) {
 		DataDbName: "10",
 		DataDbUser: "cgrates",
 		Opts: map[string]interface{}{
-			utils.QueryTimeoutCfg:       "10s",
-			utils.ClusterOnDownDelayCfg: "0",
-			utils.ClusterSyncCfg:        "5s",
-			utils.RedisClusterCfg:       false,
-			utils.RedisSentinelNameCfg:  "",
+			utils.QueryTimeoutCfg:            "10s",
+			utils.RedisClusterOnDownDelayCfg: "0",
+			utils.RedisClusterSyncCfg:        "5s",
+			utils.RedisClusterCfg:            false,
+			utils.RedisSentinelNameCfg:       "",
 		},
 		RmtConns: []string{},
 		RplConns: []string{},
