@@ -110,6 +110,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [Templates] Added new data converter: *unixtime
   * [ActionsS] Add prefix *acnt and *act to cdrLog action
   * [AttributeS] Add support for *prefix and *suffix type
+  * [ConfigS] Add "redis_" prefix to "dataDB" option for redis
   
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
